# project_x_dbt

./: pyproject.toml
vendas_dbt/models/example/: sources.yml
vendas_dbt/models/example/bronze/: bronze_vendas.sql
vendas_dbt/models/example/silver/: silver_vendas.sql
