[project]
name = "project-x"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "briefer (>=0.0.14,<0.0.15)",
    "dbt-postgres (>=1.9.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "project_x", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
